<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

<!-- this is hint for the topping text-->
    <string name="topping">Topping</string>

<!--    this is hint for the thankyou text-->
    <string name="thank_you">Thank you!</string>

<!--    this is hint for the whipped cream text-->
    <string name="whipped_cream">Whipped Cream</string>

<!--    this is hint for the chocolate text-->
    <string name="chocolate">Chocolate</string>

<!--    this is hint for Quantity text-->
    <string name="Quantity">Quantity</string>

    <string name="order">Order</string>

<!--    this string is used for the name of the person-->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Sahil Vishwakarma">%s</xliff:g> </string>

<!--  this string is used for the add whipped cream text in the java file  -->
    <string name="add_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g>  </string>

<!--   this is for the chocolate text -->
    <string name="Add_chocolate">Add Chocolate? <xliff:g id="AddChocolate" example="true">%b</xliff:g></string>

    <string name="Quantity_text">Quantity : <xliff:g id="quantity" example="2">%d</xliff:g> </string>


    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%d</xliff:g></string>
</resources>